# CompGraf2022-3

examples/: CMakeLists.txt
examples/asteroids/: asteroids.cpp  asteroids.hpp  main.cpp  starlayers.cpp  window.cpp  window.hpp
examples/asteroids/assets/: stars.frag
examples/firstapp/: window.cpp
examples/flappybird/: CMakeLists.txt  README.md  bird.cpp  bird.hpp  gamedata.hpp  main.cpp  pipes.cpp  pipes.hpp  ship.cpp  window.cpp  window.hpp
examples/flappybird/assets/: pipes.vert
examples/loadmodel/: window.cpp
examples/lookat/: CMakeLists.txt  camera.cpp  ground.hpp  window.cpp  window.hpp
examples/lookat/assets/: lookat.vert
examples/nonogram/: CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
examples/rolltheball/: CMakeLists.txt  README.md  ball.cpp  ball.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  gamedata.hpp  ground.cpp  model.cpp  model.hpp  wall.cpp  wall.hpp  window.cpp  window.hpp
examples/rolltheball/assets/: lookat.frag  lookat.vert
examples/rolltheball2/: CMakeLists.txt  README.md  ball.cpp  ball.hpp  camera.cpp  camera.hpp  ground.cpp  ground.hpp  main.cpp  model.cpp  model.hpp  moon.cpp  moon.hpp  sun.cpp  sun.hpp  wall.cpp  wall.hpp  window.cpp  window.hpp
examples/rolltheball2/assets/: ball.frag  (+4 more)
examples/sierpinski/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
examples/starfield/: CMakeLists.txt  ground.cpp  window.cpp  window.hpp
examples/tictactoe/: window.cpp
examples/viewer1/: CMakeLists.txt  trackball.cpp  trackball.hpp  window.cpp  window.hpp
examples/viewer3/: model.cpp  window.cpp  window.hpp
(+21 files in other folders)
